--- a/Gunslinger/app/src/main/assets/www/p5/Gunslinger/index.html
+++ b/Gunslinger/app/src/main/assets/www/p5/Gunslinger/index.html
@@ -4,6 +4,7 @@
     <script src="../p5.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
+    <script src="../addons/jquery-3.2.1.min.js"></script>
     <script src="sketch.js"></script>
     <script src="barrel.js"></script>
     <script src="button.js"></script>
